--- a/WeifangDemo/app/src/main/res/values/strings.xml
+++ b/WeifangDemo/app/src/main/res/values/strings.xml
@@ -193,4 +193,7 @@
     <string name="str_terminal_id">终端ID:</string>
     <string name="str_init_network">正在初始化网络...</string>
     <string name="str_no_permitted_card">不允许补登充值的卡</string>
+    <string name="str_get_main_dir_failure">选择主目录失败</string>
+    <string name="str_get_son_dir_failure">选择子目录失败</string>
+    <string name="str_card_not_distinguish">无法识别的卡</string>
 </resources>
