--- a/WeifangDemo/app/src/main/res/values/strings.xml
+++ b/WeifangDemo/app/src/main/res/values/strings.xml
@@ -76,8 +76,6 @@
     <string name="erase_external_storage_description">清除 SD 卡中的全部数据，例如音乐或照片</string>
     <string name="master_clear_button_text">重置设备</string>
     <string name="master_clear_desc_erase_external_storage">\n\n"要清除音乐、图片和其他用户数据，您需要清空该 "<b>"SD 卡"</b>"。"</string>
-    <string name="help_url_backup_reset" translatable="false"></string>
-    <string name="backup_erase_dialog_title"></string>
     <string name="backup_erase_dialog_message">要停止备份您的 WLAN 密码、书签、其他设置和应用数据，并清除服务器上的所有副本吗？</string>
     <string name="master_clear_final_desc">要清除所有个人信息和下载的应用吗？请注意，此操作无法撤消！</string>
     <string name="master_clear_final_button_text">清除全部内容</string>
@@ -87,7 +85,6 @@
     <string name="mobile_connect_to_internet">请连接到互联网</string>
     <string name="sms_application_title">默认短信应用</string>
     <string name="dongle_settings_title">加密狗</string>
-    <string name="help_url_more_networks"></string>
     <string name="wifi_in_airplane_mode">正处于飞行模式下</string>
     <string name="wifi_error">"出错"</string>
     <string name="wifi_security_short_wep">WEP</string>
@@ -196,4 +193,13 @@
     <string name="str_get_main_dir_failure">选择主目录失败</string>
     <string name="str_get_son_dir_failure">选择子目录失败</string>
     <string name="str_card_not_distinguish">无法识别的卡</string>
+    <string name="str_recharging">正在进行补充值</string>
+    <string name="str_no_moving_card">请勿移动卡片</string>
+    <string name="str_not_check_uncharge_order">未查询到待补登充值订单</string>
+    <string name="str_useless_card">无效卡</string>
+    <string name="str_recharge_success_balance">充值成功！  余额：</string>
+    <string name="str_please_move_card">请移除卡片</string>
+    <string name="str_error_code">错误码：</string>
+    <string name="str_recharge_fail_please_retry_stick_card">充值失败 请贴卡重试！</string>
+    <string name="str_unknow_error">未知错误</string>
 </resources>
